Update dependencies
Signed-off-by: dcillera <dcillera@redhat.com>